--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/pluralsight-projects/NodeExpress-BankingPortal#readme",
   "dependencies": {
     "ejs": "2.6.1",
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "jshint": "^2.10.2"
   },
   "devDependencies": {
     "chai": "4.1.2",
