--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/pluralsight-projects/NodeExpress-BankingPortal#readme",
   "dependencies": {
-    "ejs": "2.6.1",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "4.16.3",
-    "jshint": "^2.10.2"
+    "jshint": "^2.10.2",
+    "mongo": "^0.1.0",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
